css/styles.css
/* SETUP */

html { width: 100%; height: 100%; }

body {
    width: 100%; height: 100%;
    font-family: 'Public Sans', sans-serif;
    color: #000000;
    display: flex; align-content: stretch;
    -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
}


/* ELEMENTS */

.black { background-color: #000000; } .black-text { color: #000000; }

.white { background-color: #ffffff; } .white-text { color: #ffffff; }

.purple { background-color: #8158FC; } .purple-text { color: #8158FC; }

.green { background-color: #3FDE87; } .green-text { color: #3FDE87; }

.red { background-color: #FB5252; } .red-text { color: #FB5252; }

.yellow { background-color: #EEDA2B; } .yellow-text { color: #EEDA2B; }

.bordered {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    border: 2px solid #000000;
}

/* COMPONENTS */

.container { width: 100%; max-width: 610px; margin: 0 auto; position: relative; z-index: 2; }

.btn {
    display: inline-block;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    background-color: #ffffff; color: #000000;
    font-weight: 600; font-size: 15px;
    text-decoration: none;
    border: 2px solid #000000;
    line-height: 1px;
    padding: 1.25em 1.75em;
}

.btn.btn__only-icon {
    line-height: 0%;
    padding: 0.25em 0.42em;
    font-size: 30px
}

.social-menu {
    width: 160px; height: 18px;
    overflow: hidden;
    display: flex; flex-direction: row;
    align-content: center; justify-content: space-between;
    padding: 0px;
}

.social-menu a {
    color: #000000; text-decoration: none;
    display: block;
    width: 18px; height: 18px;
}

.main-menu {
    font-size: 24px;
    width: 300px;
}

.main-menu span, .main-menu a {
    color: #000000; font-weight: 400;
    text-decoration: none;
    display: flex; justify-content: right; align-items: center;
    padding-bottom: 46px;
    float: right;
    clear: both;
    cursor: pointer;
}

.main-menu span i {
    font-size: 18px;
    margin-left: 20px;
}

.copyright {
    display: inline-block;
    font-size: 12px;
    opacity: 0.3;
}

.copyright i { margin-right: 10px; }

h1 {
    font-size: 62px; font-weight: 400;
}

h2 {
    font-size: 30px;
    font-weight: 300;
    padding-bottom: 0px; margin-bottom: 0.25em;
}

p {
    font-size: 18px;
    font-weight: 300;
    line-height: 200%;
    margin-top: 0px; padding-bottom: 1em;
}

.logo {
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    user-select: none;

    width: 49px; height: 49px;
}

#contact form {
    margin-top: 2em;
    overflow: hidden;
}

form input, textarea {
    outline: none;
    border: none; border: 2px solid #000000;
    padding: 8px 12px;
    font-size: 1em;
    transition: all 100ms;
    margin-top: 24px;
}

form input[name="name"],
form input[name="email"],
form input[name="company"],
form input[name="subject"] {
    width: 48%;
}

form input[name="name"], form input[name="company"]  { margin-right: 16px; }

form textarea { width: 99.25%; height: 300px; }

form input[type="submit"] {
    background-color: #000000; color: #ffffff;
    font-weight: 600; font-size: 15px;
    text-decoration: none;
    border: 2px solid #000000;
    line-height: 1px;
    padding: 1.25em 1.75em;
    cursor: pointer;
    margin-top: 16px;
}

/* ACTIVE, HOVER STATES */

#design:hover, #design.active { color: #8158FC !important; }

#music:hover, #music.active { color: #3FDE87 !important; }

#video:hover, #video.active { color: #FB5252 !important; }

#vr:hover, #vr.active { color: #EEDA2B !important; }

/* HOME CONTENT */

#main {
    order: 2;
    flex-grow: 2;
    text-align: left;
    padding: 49px;
    display: flex; align-items: center; justify-content: flex-start;
    max-height: 100vh;
    transition: all 100ms;
}

#sidebar {
    order: 1;
    flex-grow: 1;
    min-width: 330px;
    max-width: 25%;
    padding: 24px;

    display: flex; flex-direction: column; justify-content: space-between; align-items: flex-end;
    max-height: 100vh;
}

#sidebar .copyright {
    position: absolute;
    bottom: 24px; left: 24px;
    display: none;
}

#manifesto-mobile { display: none; padding: inherit; }

.main-menu { margin-right: 20px; }

#main .copyright {
    position: absolute;
    bottom: 24px; right: 24px;
}

#main h1 { margin-top: -1em; }

.logo-holder span {
    margin-right: 0.75em;
    font-weight: 500;
    color: #000000;
    display: none;
} .logo-holder { text-decoration: none; }

#main div { padding-left: 50px; }

/* MANIFESTO/CONTACT CONTENT */

#manifesto, #contact, #contact-success {
    width: 100%; height: 100%;
    box-sizing: border-box;
    border: 2px solid #000000;
    overflow-y: scroll;
    padding: 24px;
    text-align: right;
}

#manifesto .container, #contact .container {
    line-height: 150%;
    padding-bottom: 10em;
    overflow-y: scroll;
    text-align: left;
}

#manifesto h2, #contact h2 { margin-top: 100px; margin-bottom: 0.75em; }

#manifesto span {
    display: inline-block;
    padding-bottom: 3em;
    font-weight: 300;
}

/* CONTACT SUCCESS FORM */

#contact-success {
    display: flex;
    justify-content: center;
    align-items: center;
}

#contact-success div { text-align: center; }

#contact-success div p { padding-bottom: 0em; }

